🐛 fix: add responsive adjustements (margin to title, flex-wrap)

--- a/pages/my-recipes/MyRecipes.module.scss
+++ b/pages/my-recipes/MyRecipes.module.scss
@@ -1,3 +1,5 @@
+@use "styles/abstracts/variables" as *;
+
 .name {
   display: flex;
   gap: 2rem;
@@ -15,6 +17,14 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  padding: 1em;
+  background-color: #eee;
+  border-radius: $border-radius;
+
+  @media screen and (max-width: 578px) {
+    align-items: flex-start;
+    margin-top: 1rem;
+  }
 }
 
 .ingredient {
